01-ecs-express-mode/cloudformation/pre-req/one-vpc.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Create VPC A, VPC B and VPC C each with an IGW, NATGW and public and private subnets in 2AZs using 10.0.0.0/16, 10.1.0.0/16 and 10.2.0.0/16"

Metadata:
  "AWS::CloudFormation::Interface":
    ParameterGroups:
      - Label:
          default: "VPC Parameters"
        Parameters:
          - AvailabilityZoneA
          - AvailabilityZoneB

Parameters:
  AvailabilityZoneA:
    Description: Availability Zone 1
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1a
  AvailabilityZoneB:
    Description: Availability Zone 2
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1b
  AvailabilityZoneC:
    Description: Availability Zone 3
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1c

Resources:
# VPC A Resources
  VpcA:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: "VPC A"

  VpcAPublicSubnet1:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VpcA
    Properties:
      AvailabilityZone: !Ref AvailabilityZoneA
      CidrBlock: "10.0.0.0/24"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "VPC A Public Subnet AZ1"
      VpcId: !Ref VpcA

  VpcAPublicSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VpcA
    Properties:
      AvailabilityZone: !Ref AvailabilityZoneB
      CidrBlock: "10.0.2.0/24"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "VPC A Public Subnet AZ2"
      VpcId: !Ref VpcA

  VpcAPublicSubnet3:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VpcA
    Properties:
      AvailabilityZone: !Ref AvailabilityZoneC
      CidrBlock: "10.0.4.0/24"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "VPC A Public Subnet AZ3"
      VpcId: !Ref VpcA

  VpcAPublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: VpcA
    Properties:
      VpcId: !Ref VpcA
      Tags:
        - Key: Name
          Value: "VPC A Public Route Table"

  VpcAPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
      - VpcAPublicSubnetRouteTable
      - VpcAPublicSubnet1
    Properties:
      RouteTableId: !Ref VpcAPublicSubnetRouteTable
      SubnetId: !Ref VpcAPublicSubnet1

  VpcAPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
      - VpcAPublicSubnetRouteTable
      - VpcAPublicSubnet2
    Properties:
      RouteTableId: !Ref VpcAPublicSubnetRouteTable
      SubnetId: !Ref VpcAPublicSubnet2

  VpcAPublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn: 
      - VpcAPublicSubnetRouteTable
      - VpcAPublicSubnet3
    Properties:
      RouteTableId: !Ref VpcAPublicSubnetRouteTable
      SubnetId: !Ref VpcAPublicSubnet3

  VpcAPrivateSubnet1:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VpcA
    Properties:
      AvailabilityZone: !Ref AvailabilityZoneA
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: "VPC A Private Subnet AZ1"
      VpcId: !Ref VpcA

  VpcAPrivateSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VpcA
    Properties:
      AvailabilityZone: !Ref AvailabilityZoneB
      CidrBlock: "10.0.3.0/24"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: "VPC A Private Subnet AZ2"
      VpcId: !Ref VpcA

  VpcAPrivateSubnet3:
    Type: AWS::EC2::Subnet
    DependsOn: 
      - VpcA
    Properties:
      AvailabilityZone: !Ref AvailabilityZoneC
      CidrBlock: "10.0.5.0/24"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: "VPC A Private Subnet AZ3"
      VpcId: !Ref VpcA

  VpcAPrivateSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: VpcA
    Properties:
      VpcId: !Ref VpcA
      Tags:
        - Key: Name
          Value: "VPC A Private Route Table"

  VpcAPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - VpcAPrivateSubnetRouteTable
      - VpcAPrivateSubnet1
    Properties:
      RouteTableId: !Ref VpcAPrivateSubnetRouteTable
      SubnetId: !Ref VpcAPrivateSubnet1

  VpcAPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - VpcAPrivateSubnetRouteTable
      - VpcAPrivateSubnet2
    Properties:
      RouteTableId: !Ref VpcAPrivateSubnetRouteTable
      SubnetId: !Ref VpcAPrivateSubnet2

  VpcAPrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - VpcAPrivateSubnetRouteTable
      - VpcAPrivateSubnet3
    Properties:
      RouteTableId: !Ref VpcAPrivateSubnetRouteTable
      SubnetId: !Ref VpcAPrivateSubnet3

  VpcAWorkloadSubnetsNacl:
    Type: AWS::EC2::NetworkAcl
    DependsOn: VpcA
    Properties:
      VpcId: !Ref VpcA
      Tags:
        - Key: Name
          Value: "VPC A Workload Subnets NACL"

  VpcAWorkloadSubnetsNaclInboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref VpcAWorkloadSubnetsNacl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      CidrBlock: 0.0.0.0/0

  VpcAWorkloadSubnetsNaclOutboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref VpcAWorkloadSubnetsNacl
      RuleNumber: 100
      Protocol: -1
      Egress: true
      RuleAction: allow
      CidrBlock: 0.0.0.0/0

  VpcANetworkAclAssociationPublicSubnet1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DependsOn: 
      - VpcAPublicSubnet1
      - VpcAWorkloadSubnetsNacl
    Properties:
      SubnetId: !Ref VpcAPublicSubnet1
      NetworkAclId: !Ref VpcAWorkloadSubnetsNacl

  VpcANetworkAclAssociationPublicSubnet2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DependsOn: 
      - VpcAPublicSubnet2
      - VpcAWorkloadSubnetsNacl
    Properties:
      SubnetId: !Ref VpcAPublicSubnet2
      NetworkAclId: !Ref VpcAWorkloadSubnetsNacl

  VpcANetworkAclAssociationPrivateSubnet1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DependsOn: 
      - VpcAPrivateSubnet1
      - VpcAWorkloadSubnetsNacl
    Properties:
      SubnetId: !Ref VpcAPrivateSubnet1
      NetworkAclId: !Ref VpcAWorkloadSubnetsNacl

  VpcANetworkAclAssociationPrivateSubnet2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DependsOn: 
      - VpcAPrivateSubnet2
      - VpcAWorkloadSubnetsNacl
    Properties:
      SubnetId: !Ref VpcAPrivateSubnet2
      NetworkAclId: !Ref VpcAWorkloadSubnetsNacl

  VpcANetworkAclAssociationPrivateSubnet3:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    DependsOn: 
      - VpcAPrivateSubnet3
      - VpcAWorkloadSubnetsNacl
    Properties:
      SubnetId: !Ref VpcAPrivateSubnet3
      NetworkAclId: !Ref VpcAWorkloadSubnetsNacl

  VpcAInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: "VPC A IGW"

  VpcAInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn:
      - VpcA
      - VpcAInternetGateway
    Properties:
      VpcId: !Ref VpcA
      InternetGatewayId: !Ref VpcAInternetGateway

  VpcADirectInternetRoute:
    Type: AWS::EC2::Route
    DependsOn: 
      - VpcAInternetGatewayAttachment
      - VpcAPublicSubnetRouteTable
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VpcAInternetGateway
      RouteTableId: !Ref VpcAPublicSubnetRouteTable

  VpcANatEip:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc

  VpcANatGateway:
    Type: "AWS::EC2::NatGateway"
    DependsOn: 
      - VpcAPublicSubnet1
      - VpcANatEip
    Properties:
      AllocationId:
        Fn::GetAtt:
          - VpcANatEip
          - AllocationId
      SubnetId: !Ref VpcAPublicSubnet1
      Tags:
        - Key: Name
          Value: "VPC A NATGW"

  VpcANatInternetRoutePrivate:
    Type: AWS::EC2::Route
    DependsOn: 
      - VpcANatGateway
      - VpcAPrivateSubnetRouteTable
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref VpcANatGateway
      RouteTableId: !Ref VpcAPrivateSubnetRouteTable

 
## VPC A Outputs
Outputs:
  VpcA:
    Description: "The Created VPC"
    Value: !Ref VpcA
    Export:
      Name: !Sub "VpcAId"
  VpcAPublicSubnet1:
    Description: "VPC A Public Subnet AZ1"
    Value: !Ref VpcAPublicSubnet1
    Export:
      Name: !Sub "VpcAPublicSubnetAZ1"
  VpcAPublicSubnet2:
    Description: "VPC A Public Subnet AZ2"
    Value: !Ref VpcAPublicSubnet2
    Export:
      Name: !Sub "VpcAPublicSubnetAZ2"
  VpcAPrivateSubnet1:
    Description: "VPC A Private Subnet AZ1"
    Value: !Ref VpcAPrivateSubnet1
    Export:
      Name: !Sub "VpcAPrivateSubnetAZ1"
  VpcAPrivateSubnet2:
    Description: "VPC A Private Subnet AZ2"
    Value: !Ref VpcAPrivateSubnet2
    Export:
      Name: !Sub "VpcAPrivateSubnetAZ2"
  VpcAPrivateSubnet3:
    Description: "VPC A Private Subnet AZ3"
    Value: !Ref VpcAPrivateSubnet3
    Export:
      Name: !Sub "VpcAPrivateSubnetAZ3"
